testdata/baselines/reference/fourslash/syntaxandSemanticDiagnostics/unreachableCodeDiagnostics.baseline
// === Syntax and Semantic Diagnostics ===
/unreachableCodeDiagnostics.tlua(1,11): error TS2304: Cannot find name 'Error'.
/unreachableCodeDiagnostics.tlua(3,1): warning TS7027: Unreachable code detected.


==== /unreachableCodeDiagnostics.tlua (2 errors) ====
    throw new Error();
              ~~~~~
!!! error TS2304: Cannot find name 'Error'.
    	
    (() => {})();
    ~~~~~~~~~~~~~
!!! warning TS7027: Unreachable code detected.
    	